refactor: moving styles to relevant components

--- a/bak/index.html
+++ b/bak/index.html
@@ -51,7 +51,7 @@
 					</div>
 		</div>
 		<!-- /.intro -->
-		<div class="content-section-1 pad-section d-flex flex-column align-items-center px-3">
+		<div class="content-section-1 t-pad-section d-flex flex-column align-items-center px-3">
 			
 				<h2>Our Show</h2>
 				<div class="card-deck">
@@ -108,7 +108,7 @@
 			
 		</div>
 		<!-- /.content-section-1 -->
-		<div class="content-section-2 pad-section d-flex flex-column align-items-center">
+		<div class="content-section-2 t-pad-section d-flex flex-column align-items-center">
 			<h2>Contact</h2>
 			<div class="contact d-flex flex-column align-items-center pt-3">
 				<p>Chris Cole</p>						
